force-app/main/default/objects/Permission_Set_Assignment__mdt/fields/Permission_Set_Group__c.field-meta.xml
<CustomField>
    <fullName>Permission_Set_Group__c</fullName>
    <label>Permission Set Group</label>
    <type>TextArea</type>
</CustomField>