force-app/main/default/objects/Permission_Set_Assignment__mdt/fields/Permission_Set_Licenses__c.field-meta.xml
<CustomField>
    <fullName>Permission_Set_Licenses__c</fullName>
    <label>Permission Set Licenses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>