force-app/main/default/objects/Permission_Set_Assignment__mdt/fields/Permission_Sets__c.field-meta.xml
<CustomField>
    <fullName>Permission_Sets__c</fullName>
    <label>Permission Sets</label>
    <type>TextArea</type>
</CustomField>