force-app/main/default/objects/Permission_Set_Assignment__mdt/fields/Profile__c.field-meta.xml
<CustomField>
    <fullName>Profile__c</fullName>
    <label>Profile</label>
    <length>50</length>
    <type>Text</type>
</CustomField>