force-app/main/default/objects/Permission_Set_Assignment__mdt/fields/Resource_Type__c.field-meta.xml
<CustomField>
    <fullName>Resource_Type__c</fullName>
    <label>Resource Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dispatcher</fullName>
                <default>true</default>
                <label>Dispatcher</label>
            </value>
            <value>
                <fullName>Technician</fullName>
            </value>
            <value>
                <fullName>Dispatcher and Technician</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>